<resources>
    <string name="app_name">Object Challenger</string>
    <string name="LoginText">로그인</string>
    <string name="IDInput">아이디</string>
    <string name="Name">이름</string>
    <string name="Nickname">닉네임</string>
    <string name="PasswordInput">비밀번호</string>
    <string name="PasswordInputCheck">비밀번호 확인</string>
    <string name="JoinButton">회원 가입</string>
    <string name="Year">연도</string>
    <string name="Month">월</string>
    <string name="Date">일</string>
    <string name="Email">이메일</string>
    <string name="OK">확인</string>
    <string name="Cancel">취소</string>
    <string name="Options">게임 룸 설정</string>
    <string name="GameMode">게임 모드</string>
    <string name="TimeSet">시간 제한</string>
    <string name="MemberNum">게임 인원</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>