<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".JoinActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom = "20dp"
            android:gravity="center"
            android:textSize="15pt"
            android:textStyle="bold"
            android:textColor="@color/mainblue"
            android:text="@string/JoinButton" />

        <EditText
            android:id="@+id/editID"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/frameclear"
            android:ems="10"
            android:hint="@string/Email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text=""
            android:textColorHint="@color/mainsky" />

        <EditText
            android:importantForAutofill="no"
            android:id="@+id/editPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:ems="10"
            android:hint="@string/PasswordInput"
            android:background="@drawable/frameclear"
            android:textColorHint="@color/mainsky"
            android:inputType="textPassword"
            android:text="" />

        <EditText
            android:importantForAutofill="no"
            android:id="@+id/editPasswordCheck"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:ems="10"
            android:hint="@string/PasswordInputCheck"
            android:background="@drawable/frameclear"
            android:textColorHint="@color/mainsky"
            android:inputType="textPassword"
            android:text="" />

        <TextView
            android:importantForAutofill="no"
            android:id="@+id/IsPasswordSame"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:ems="10"
            android:background="@drawable/button_round"
            android:textColor="@color/mainsky"
            android:text="비밀번호를 입력하세요."/>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editName"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/smallframeclear"
                android:ems="10"
                android:hint="@string/Name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:privateImeOptions="defaultInputmode = korean"
                android:textColorHint="@color/mainsky" />

            <EditText
                android:id="@+id/editNickname"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/smallframeclear"
                android:ems="10"
                android:hint="@string/Nickname"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:privateImeOptions="defaultInputmode = korean"
                android:textColorHint="@color/mainsky" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editYear"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/smallframeclear"
                android:ems="10"
                android:hint="@string/Year"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:text=""
                android:textColorHint="@color/mainsky" />

            <Spinner
                android:id="@+id/editMonth"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/smallframeclear"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:text="월"
                android:textColor="@color/mainsky" />

            <EditText
                android:id="@+id/editDay"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/smallframeclear"
                android:ems="10"
                android:hint="@string/Date"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:text=""
                android:textColorHint="@color/mainsky" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <android.widget.Button
                android:id="@+id/OK"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:ems="10"
                android:text="@string/OK"
                android:textColor="@color/white"
                android:importantForAutofill="no"
                android:paddingLeft="7dp"
                android:paddingRight="7dp" />

            <android.widget.Button
                android:id="@+id/Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:ems="10"
                android:importantForAutofill="no"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:text="@string/Cancel"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>