<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom = "20dp"
            android:gravity="center"
            android:textSize="15pt"
            android:textStyle="bold"
            android:textColor="@color/mainsky"
            android:text="@string/Options" />

        <TextView
            android:id="@+id/GameMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="10pt"
            android:textStyle="bold"
            android:textColor="@color/mainsky"
            android:text="@string/GameMode" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            >

            <RadioButton
                android:id="@+id/radioButtonClassic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:textSize="12dp"
                android:text="Classic"
                android:textColor="@drawable/selector_radio"
                android:background="@drawable/selector_radio_button"
                android:button="@null"
                android:layout_marginEnd="5dp"
                />

            <RadioButton
                android:id="@+id/radioButtonSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="Speed"
                android:textColor="@drawable/selector_radio"
                android:background="@drawable/selector_radio_button"
                android:button="@null"
                android:layout_marginStart="5dp"
                />

        </RadioGroup>

        <TextView
            android:id="@+id/TimeSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="10pt"
            android:textStyle="bold"
            android:textColor="@color/mainsky"
            android:text="@string/TimeSet" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            >

            <RadioButton
                android:id="@+id/radioButton30sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:gravity="center"
                android:button="@null"
                android:textColor="@drawable/selector_radio"
                android:background="@drawable/selector_radio_button"
                android:text="30초"
                android:layout_marginEnd="5dp"
                />

            <RadioButton
                android:id="@+id/radioButton45sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:gravity="center"
                android:button="@null"
                android:textColor="@drawable/selector_radio"
                android:background="@drawable/selector_radio_button"
                android:text="45초"
                android:layout_marginStart="5dp"
                />

            <RadioButton
                android:id="@+id/radioButton60sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:gravity="center"
                android:button="@null"
                android:textColor="@drawable/selector_radio"
                android:background="@drawable/selector_radio_button"
                android:text="60초"
                android:layout_marginStart="5dp"
                />

        </RadioGroup>

        <TextView
            android:id="@+id/MemberNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="10pt"
            android:textStyle="bold"
            android:textColor="@color/mainsky"
            android:text="@string/MemberNum" />

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            >

            <RadioButton
                android:id="@+id/radioButton2people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="2"
                android:gravity="center"
                android:button="@null"
                android:textColor="@drawable/selector_radio"
                android:background="@drawable/selector_radio_button"
                android:layout_marginEnd="5dp"
                />

            <RadioButton
                android:id="@+id/radioButton4people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="4"
                android:gravity="center"
                android:button="@null"
                android:textColor="@drawable/selector_radio"
                android:background="@drawable/selector_radio_button"
                android:layout_marginStart="5dp"
                />

            <RadioButton
                android:id="@+id/radioButton6people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="6"
                android:gravity="center"
                android:button="@null"
                android:textColor="@drawable/selector_radio"
                android:background="@drawable/selector_radio_button"
                android:layout_marginStart="5dp"
                />

            <RadioButton
                android:id="@+id/radioButton8people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="8"
                android:gravity="center"
                android:button="@null"
                android:textColor="@drawable/selector_radio"
                android:background="@drawable/selector_radio_button"
                android:layout_marginStart="5dp"
                />

        </RadioGroup>

        <android.widget.Button
            android:id="@+id/button5"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:text="확인" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>